--- a/mapping/templates/mapping/index.html
+++ b/mapping/templates/mapping/index.html
@@ -6,12 +6,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-    crossorigin="" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.76.0/dist/L.Control.Locate.min.css" />
+  
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
- 
     <script>
     function toggleDropdown() {
       const menu = document.getElementById('dropdownMenu');
@@ -118,6 +116,7 @@
   {{ point|json_script:"point_json" }}
   <div id="map" class="absolute inset-0 w-full h-full z-0" >
 </div>
+
 <div id="LocDescrip" class="absolute top-20z-20 bg-red-500 shadow-lg p-4 w-[40%] max-w-md overflow-auto hidden">
   <h2 class="text-2xl font-semibold mt-4 text-gray-800">Location Name</h2>
   <p class="text-gray-600 text-sm leading-relaxed mb-4">
@@ -157,6 +156,9 @@
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
 integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
 crossorigin=""></script>
+<script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.76.0/dist/L.Control.Locate.min.js" charset="utf-8"></script>
+<script src="{% static 'js/utils.js' %}"></script>
+<script src="{% static 'js/modes.js' %}"></script>
 <script src="{% static 'js/map.js' %}"></script>
 
 </body>
