--- a/templates/mapping/index.html
+++ b/templates/mapping/index.html
@@ -46,7 +46,7 @@
 
         <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
           <div class="flex shrink-0 items-center">
-            <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-white" aria-current="page">Community Mapping</a>
+            <a href="{% url 'navbar' %}" class="rounded-md px-3 py-2 text-sm font-medium text-white" aria-current="page">Community Mapping</a>
           </div>
           <div class="hidden sm:ml-6 sm:block">
             <div class="flex space-x-4">
@@ -98,10 +98,10 @@
               {% if user.is_authenticated %}
                 <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</a>
                 <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a>
-                <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
+                <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Log out</a>
               {% else %}
                   <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a>
-                  <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign in</a>
+                  <a href="{%url 'login' %}" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Login</a>
               {% endif %}
             </div>
           </div>
@@ -124,7 +124,7 @@
   <div id="map" class="absolute inset-0 w-full h-full z-0" >
 </div>
 
-<div id="LocDescrip" class="absolute top-20z-20 bg-red-500 shadow-lg p-4 w-[40%] max-w-md overflow-auto hidden">
+<div id="parkDescriptionCard" onbeforeunload="hideDescriptionCard()" class="absolute top-20z-20 bg-red-500 shadow-lg p-4 w-[40%] max-w-md overflow-auto " style="display:none">
   <h2 class="text-2xl font-semibold mt-4 text-gray-800">Location Name</h2>
   <p class="text-gray-600 text-sm leading-relaxed mb-4">
     This is a short description of the location. It can include historical context, notable features, or any interesting facts about the place.
@@ -151,6 +151,7 @@
       Visit Website
     </button>
   </div>
+
   <div class="mt-4 flex flex-wrap gap-2">
     <span class="bg-gray-100 text-gray-600 text-xs px-2 py-1 rounded-full">Historic</span>
     <span class="bg-gray-100 text-gray-600 text-xs px-2 py-1 rounded-full">Tourist Spot</span>
@@ -164,13 +165,16 @@
 integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
 crossorigin=""></script>
 <script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.76.0/dist/L.Control.Locate.min.js" charset="utf-8"></script>
+<script src="{% static 'js/map.js' %}"></script>
 <script>
   const isAuthenticated = {{ request.user.is_authenticated|yesno:"true,false" }};
-  {% comment %} const loginUrl = "{% url 'login' %}?next={{ request.path }}"; {% endcomment %}
+  var div = L.DomUtil.get('parkDescriptionCard');
+  L.DomEvent.on(div, 'mousewheel', L.DomEvent.stopPropagation);
+  L.DomEvent.on(div, 'click', L.DomEvent.stopPropagation);
+
 </script>
 <script src="{% static 'js/utils.js' %}"></script>
 <script src="{% static 'js/modes.js' %}"></script>
-<script src="{% static 'js/map.js' %}"></script>
 
 </body>
 </html>
