--- a/templates/mapping/index.html
+++ b/templates/mapping/index.html
@@ -124,7 +124,8 @@
   <div id="map" class="absolute inset-0 w-full h-full z-0" >
 </div>
 
-<div id="parkDescriptionCard" onbeforeunload="hideDescriptionCard()" class="absolute top-20z-20 bg-red-500 shadow-lg p-4 w-[40%] max-w-md overflow-auto " style="display:none">
+<div id="parkDescriptionCard" onbeforeunload="hideDescriptionCard()" class="absolute top-0 right-0 bottom-0 z-20 bg-red-500 shadow-lg 
+            p-4 w-[30%] max-w-md h-full overflow-auto"style="display:none">
   <h2 class="text-2xl font-semibold mt-4 text-gray-800">Location Name</h2>
   <p class="text-gray-600 text-sm leading-relaxed mb-4">
     This is a short description of the location. It can include historical context, notable features, or any interesting facts about the place.
